feat: Integrate LearnLM-informed pedagogical principles and optimize real-time voice interaction for improved responsiveness.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ Thumbs.db
 # ---------------------------------------------------------------------------
 *.log
 logs/
+Strategy and Technical Framework.csv
