feat: Implement end session confirmation, enhance audio interruption handling, and streamline deployment script for Dockerfile.

--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,19 @@ gcloud-service-key.json
 *.pfx
 
 # ---------------------------------------------------------------------------
+# Local temp files
+# ---------------------------------------------------------------------------
+.temp/
+
+# ---------------------------------------------------------------------------
 # Local dev notes & planning docs
 # ---------------------------------------------------------------------------
 *.local.md
 TIMELINE.md
 SeeMeTutor_PRD.md
 SeeMeTutor_Week1_BuildGuide.md
+epics_todo.md
+extra_miles.md
 
 # ---------------------------------------------------------------------------
 # Editor & AI assistant local config
