feat: Integrate Google ADK for agent management, introduce the `tutor_agent` module, and add new documentation for architecture, context, ADK reference, and a story workshop.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ extra_miles.md
 .claude/
 .cursor/
 .aider/
+.scripts/
 
 # ---------------------------------------------------------------------------
 # Python
@@ -105,3 +106,6 @@ Thumbs.db
 *.log
 logs/
 Strategy and Technical Framework.csv
+docs/context.md
+docs/architecture-flow.md
+docs/story_workshop.md
