--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.115.12
-uvicorn[standard]==0.34.0
+fastapi>=0.112.0
+uvicorn[standard]>=0.30.0
 google-genai>=1.14.0
-google-adk>=1.0.0
+google-adk>=1.25.1
 google-cloud-firestore>=2.19.0
-python-dotenv==1.1.0
-websockets==14.2
+python-dotenv>=1.1.0
+websockets>=13.0
